titles for project pages
Updated titles for each project page

--- a/projects/GoldenDive.html
+++ b/projects/GoldenDive.html
@@ -33,7 +33,7 @@
             <div class="grayBackground">
                 <div class="TextBox PageTop ">
                     <h1>
-                        Hi, I am Laith Alfadhli
+                        The Golden Dive
                     </h1>
                 </div>
             </div>
