--- a/projects/Manastorm.html
+++ b/projects/Manastorm.html
@@ -33,7 +33,7 @@
             <div class="grayBackground">
                 <div class="TextBox PageTop ">
                     <h1>
-                        Hi, I am Laith Alfadhli
+                        Manastorm
                     </h1>
                     <p>
                         A multiplayer first-person spellcaster in which players work in teams to obliterate their enemies. The game was an ambitious university group project with four members as a part of the group. The allocated timeframe to complete the project was thirteen weeks, with sprints counting every second week.    
