--- a/projects/Racing.html
+++ b/projects/Racing.html
@@ -33,7 +33,7 @@
             <div class="grayBackground">
                 <div class="TextBox PageTop ">
                     <h1>
-                        Hi, I am Laith Alfadhli
+                        Physics 3D Racer
                     </h1>
                     <p>
                         It's simple, they said, it's easy. Just get from point A to B the fastest you can. Nothing can go wrong. The game was a university group project with two members and a guideline of features to be included. The allocated timeframe to complete the project was four weeks.
