--- a/projects/TradeAB.html
+++ b/projects/TradeAB.html
@@ -33,7 +33,7 @@
             <div class="grayBackground">
                 <div class="TextBox PageTop ">
                     <h1>
-                        Hi, I am Laith Alfadhli
+                       TradeAB
                     </h1>
                     <p>
                         A website marketplace tutorial, place items on sale and bid your way to obtain them. Alternatively, outright buy them from other users. The website was a university group project that spanned 7-8 weeks and had four members. 
