--- a/projects/WorldStats.html
+++ b/projects/WorldStats.html
@@ -33,7 +33,7 @@
             <div class="grayBackground">
                 <div class="TextBox PageTop ">
                     <h1>
-                        Hi, I am Laith Alfadhli
+                        WorldStats
                     </h1>
                     <p> 
                         WorldStats is a quiz game that aims to teach its players about statistics and different parts of the world if they are inclined to explore. 
