Updating project links
add link to project pages, need to redesign look of website

--- a/About.html
+++ b/About.html
@@ -19,10 +19,10 @@
                 </div>
 
                 <div class="rightHorBar">
-                    <a href="#projects">List of Projects</a>
+                    <a href="../Projects.html">List of Projects</a>
                     <span class="horiNavSpace"></span>
 
-                    <a class="" href="../About.html">About</a>
+                    <a class="active" href="../About.html">About</a>
                     <span class="horiNavSpace"></span>
                 </div>
 
