--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 </div>
 
                 <div class="rightHorBar">
-                    <a href="#projects">List of Projects</a>
+                    <a href="../Projects.html">List of Projects</a>
                     <span class="horiNavSpace"></span>
 
                     <a  href="About.html">About</a>
