--- a/projects/Racing.html
+++ b/projects/Racing.html
@@ -19,7 +19,7 @@
                 </div>
 
                 <div class="rightHorBar">
-                    <a href="#projects">List of Projects</a>
+                    <a href="../Projects.html">List of Projects</a>
                     <span class="horiNavSpace"></span>
 
                     <a class="" href="../About.html">About</a>
