--- a/Projects.html
+++ b/Projects.html
@@ -14,15 +14,15 @@
         <nav class=" ">
             <div class="topnav">
                 <div class="leftHorBar">
-                    <a href="../index.html">Laith Alfadhli</a>
+                    <a href="index.html">Laith Alfadhli</a>
                     <span class="horiNavSpace"></span>
                 </div>
 
                 <div class="rightHorBar">
-                    <a class="active" href="../Projects.html">List of Projects</a>
+                    <a class="active" href="Projects.html">List of Projects</a>
                     <span class="horiNavSpace"></span>
 
-                    <a href="../About.html">About</a>
+                    <a href="About.html">About</a>
                     <span class="horiNavSpace"></span>
                 </div>
 
