Updated JS to reflect links
Updated JS to reflect links

--- a/index.html
+++ b/index.html
@@ -88,7 +88,9 @@
                     <p id="projectBlurb" class="centreText">
                         A multiplayer first-person spellcaster in which players work in teams to obliterate their
                         enemies.
+                        <a  id="LinkProj" href="projects\Manastorm.html">Read More</a>
                     </p>
+                    
                 </div>
 
             </div>
